--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,87 @@
 <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <header>
-            <h1></h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/index.html#">Home</a>
-                    </li>
-                    <li>
-                        <a href="/index.html#about">About LTS</a>
-                    </li>
-                    <li>
-                        <a href="/hours.html">Store Hours</a>
-                    </li>
-                    <li>
-                        <a href="/contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </nav>
-            <figure>
-                <img src="" alt="">
-                <caption></caption>
-            </figure>
-        </header>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+    <header>
+        <h1>Contact Us</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/index.html#">Home</a>
+                </li>
+                <li>
+                    <a href="/index.html#about">About LTS</a>
+                </li>
+                <li>
+                    <a href="/hours.html">Store Hours</a>
+                </li>
+                <li>
+                    <a href="/contact.html">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+        <figure>
+            <img src="img/tacos_close_up_400x260.png" alt="little taco shop tacos" width="400">
+            <br>
+            <caption>Little Taco Shop Tacos</caption>
+        </figure>
+    </header>
+
+    <hr>
+
+    <main>
+        <article>
+            <h2>Our Contact Form</h2>
+            <form action="https://httpbin.org/get" method="get">
+                <fieldset>
+                    <legend>Send Us A Message</legend>
+                    <p>
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" id="name" placeholder="Jane" required>
+                    </p>
+                    <p>
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="example@email.com" required>
+                    </p>
+                    <p>
+                        <label for="message">Your Message:</label>
+                        <br>
+                        <textarea name="message" id="message" cols="27" rows="10" placeholder="Type your message here"
+                            required></textarea>
+                    </p>
+                </fieldset>
+                <button type="submit">Send</button>
+                <button type="reset">Reset</button>
+            </form>
+        </article>
+        <article>
+            <h2>Our Location</h2>
+            <address>
+                <p>
+                    555, Taco Temptation Lane, Suite T<br>
+                    Kansas City, MO 55555-5555 <br>
+                </p>
+                <p>
+                    Phone: <a href="tel:555-555-5555">555-555-5555</a>
+                </p>
+            </address>
+        </article>
+    </main>
+
+    <br>
+
+    <footer>
+        <p>
+            <a href="#">Back to Top</a>
+        </p>
 
         <hr>
 
-        <main></main>
+        <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
+</body>
 
-        <hr>
-
-        <footer>
-            <p>Copyright &copy; The Little Taco Shop</p>
-        </footer>
-    </body>
 </html>
