validated index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Ihor Lutskyi">
+    <title>Little Taco Shop</title>
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -28,7 +32,7 @@
         <figure>
             <img src="img/tacos_and_drink_400x267.png" alt="tacos and drink" width="400">
             <br>
-            <caption>Tacos and a Drink</caption>
+            <figcaption>Tacos and a Drink</figcaption>
         </figure>
     </header>
 
@@ -57,10 +61,10 @@
         <article id="menu">
             <h2>Our Menu</h2>
             <table>
+                <caption>Our Tacos</caption>
                 <thead>
-                    <caption>Our Tacos</caption>
                     <tr>
-                        <th scope="col" rowspan="3">Tacos</th>
+                        <th scope="col">Tacos</th>
                         <th scope="col">Qty</th>
                         <th scope="col">Price</th>
                     </tr>
