--- a/hours.html
+++ b/hours.html
@@ -1,6 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title></title>
+        <meta charset="UTF-8">
+        <meta name="author" content="Ihor Lutskyi">
+        <title>Little Taco Shop</title>
+
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <header>
@@ -24,7 +30,7 @@
             <figure>
                 <img src="img/tacos_tray_400x267.png" alt="a tray of tasty taco" width="400">
                 <br>
-                <caption>A Tray of Tasty Taco</caption>
+                <figcaption>A Tray of Tasty Taco</figcaption>
             </figure>
         </header>
 
