--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Ihor Lutskyi">
+    <title>Little Taco Shop</title>
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -26,7 +32,7 @@
         <figure>
             <img src="img/tacos_close_up_400x260.png" alt="little taco shop tacos" width="400">
             <br>
-            <caption>Little Taco Shop Tacos</caption>
+            <figcaption>Little Taco Shop Tacos</figcaption>
         </figure>
     </header>
 
